# UT_Fall16

./: .gitignore  README.md
ISP/: README.md
ISP/FortranQuiz_jc55395/: FortranQuiz_Q1_jc55395.f90  FortranQuiz_Q2_jc55395.f90  FortranQuiz_Q3_jc55395.f90
ISP/HW/: hw2.txt
ISP/ICL/: ICL1_jc55395.c  ICL2_jc55395.c  ICL3_jc55395.c  icl_fortran.f90
ISP/Midterm_jc55395/: Midterm_Q1_jc55395.c  Midterm_Q2_jc55395.c  Midterm_Q3_jc55395.c  Midterm_Q4_jc55395.cpp
ISP/Project/: matrix_bfs.cpp
ISP/demos/: addInterface.f90  array.f90  array1.f90  hello.f90  linemaster.mod  linkedlist.c  matmul.c  modules.f90
STC/: README.md
STC/STC-HW3/: README.md  job.slurm  mm_noreuse_2048.c  mm_reuse_2048.c  result.txt  time_2000.sh  time_2048.sh
STC/add_int/: README
STC/divcrash/: divcrash.c
STC/git_test/: prog.c  routines.f90
STC/git_testing/: README  prog.c  prog.f90  routines.c
STC/midterm/: README.md  linear_systems.c  matrix_multiply.c  time_results.txt
STC/pi/: README.md  adaptive.c  leibniz.c  monte_carlo.c  numerical.c
STC/random_processes/: README.md  markov_BCS.c  matrix.txt  monte_carlo_pi.c
achem1/: README.md
achem1/EDTA/: EDTA.bbl  EDTA.bib  EDTA.tex
achem1/GC-FID/: GC-FID.bbl  GC-FID.bib
achem1/GC-MS/: GC-MS.bbl
achem1/HPLC/: HPLC.bbl  HPLC.tex
achem1/JACS_rewrite/: add_mouthwash.txt  (+2 more)
elements_of_databases/: README.md
jcrew/: README.md
stc_Project/: LICENSE  README.md
stc_Project/src/: CMakeLists.txt  main.c  needleman_wunsch.c  needleman_wunsch.h
stc_Project/src/reference_code/examples/: nw_cpp  nw_example  sw_cpp  sw_example
(+206 files in other folders)
